--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.DS_Store
+phpMyAdmin
+
 # Built application files
 *.apk
 *.ap_
@@ -53,3 +56,5 @@ google-services.json
 freeline.py
 freeline/
 freeline_project_description.json
+/phpMyAdmin/
+/vendor/
